# MouseDetector

./: .gitignore  CMakeLists.txt  README.md
include/: MouseDetector.h
src/: MouseDetector.cpp
